# ctx

./: .gitignore  Cargo.toml  PLAN.md  README.md  bunli.config.ts  install.sh  package.json  tsconfig.json
.github/workflows/: release.yml
docs/: hld-v1-memory-ingest-retrieval.md  lld-v1-memory-ingest-retrieval.md
src/: chunking.rs  cli.rs  config.rs  index.ts  input.rs  lib.rs  main.rs  normalize.rs  output.rs  paths.rs  ranking.rs  release.rs  search.rs  update.rs
src/commands/: config.rs  config_show.rs  doctor.rs  doctor.ts  mcp.rs  memory.rs  mod.rs  setup.rs  setup.ts  uninstall.rs  uninstall.ts  update.rs  update.ts
src/config/: load-config.ts  paths.test.ts  paths.ts  save-config.ts  schema.ts
src/doctor/: doctor-service.ts
src/embeddings/: fastembed-provider.ts  local.rs  provider.rs  provider.ts
src/ingest/: chunk.test.ts  chunk.ts  ingest-service.ts  normalize.ts  read-input.ts
src/mcp/: http.rs  mod.rs  resources.rs  server.rs  stdio.rs
src/output/: render.ts
src/retrieval/: keyword-search.ts  rank.test.ts  rank.ts  search-service.ts  vector-search.ts
src/services/: memory.rs  mod.rs  runtime.rs  system.rs  types.rs
src/setup/: setup-service.ts  uninstall-service.ts
src/storage/: db.rs  lancedb.ts  mod.rs  tables.ts
src/types/: chunk.ts  document.ts  profile.ts
src/update/: release.test.ts  (+2 more)
tests/: cli_smoke.rs  ingest.rs  mcp_contract.rs  mcp_http_protocol.rs  mcp_server.rs  mcp_stdio_protocol.rs  mcp_transports.rs  paths_config.rs  paths_env.rs  release.rs  search.rs  services_memory.rs  services_runtime.rs  services_system.rs
(+18 files in other folders)
