[package]
name = "ctx"
version = "0.2.0"
edition = "2021"
description = "Local-first memory ingest and retrieval CLI"

[dependencies]
anyhow = "1.0"
arrow-array = "57.3"
arrow-schema = "57.3"
async-trait = "0.1"
axum = "0.8"
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive"] }
directories = "5.0"
fastembed = "5.13"
futures = "0.3"
lancedb = "0.27"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
rmcp = { version = "1.5.0", features = ["server", "transport-io", "transport-streamable-http-server", "schemars"] }
schemars = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.42", features = ["fs", "io-std", "io-util", "macros", "net", "rt-multi-thread"] }
toml = "0.8"
uuid = { version = "1.11", features = ["serde", "v4"] }

[dev-dependencies]
tempfile = "3.14"
